--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
                 <a href="https://www.linkedin.com/in/nathan-okazaki-a611a3344/">
                 <img src="linkedin.png" alt="iconeLinkedin" class="icone2" width="45px" height="45px">
                 </a>
+                <a href="https://www.instagram.com/nathanokzn/">
+                <img src="instagram.png" class="icone3" alt="iconeInstagram" width="45px" height="45px">
+                </a>
             </div>
             <br>
             <p>Olá, me chamo Nathan Okazaki! Sou aluno da PUCPR</p>
