--- a/index.html
+++ b/index.html
@@ -31,35 +31,47 @@
         <img src="foto.png" alt="fotoPessoal" class="foto" height="210px" width="210px">
         <div class="materia1 ">
             <div class="quadrado">
-                <h1>Raciocínio</h1>
-                <h1>Algorítmico</h1>
-                <a href="https://github.com/nathanokz/Python">
-                <button>Clique Aqui</button>
+                <img src="" alt="imagemRaciocinio" class="imgMateria">
+                <div class="conteudoQuadrado">
+                    <h1>Raciocínio</h1>
+                    <h1>Algorítmico</h1>
+                    <a href="https://github.com/nathanokz/Python">
+                    <button>Clique Aqui</button>
+                </div>
                 </a>
             </div>
         </div>
         <div class="materia2">
+            <img src="" alt="imagemRaciocinio" class="imgMateria">
             <div class="quadrado">
-                <h1>Sistemas</h1>
-                <h1>Ciberfísicos</h1>
-                <a href="https://wokwi.com/projects/432200098511204353">
-                <button>Clique Aqui</button>
+                <div class="conteudoQuadrado">
+                    <h1>Sistemas</h1>
+                    <h1>Ciberfísicos</h1>
+                    <a href="https://wokwi.com/projects/432200098511204353">
+                    <button>Clique Aqui</button>
+                    </div>
                 </a>
             </div>
         </div>
         <div class="materia3">
+            <img src="" alt="imagemRaciocinio" class="imgMateria">
             <div class="quadrado">
-                <h1>Experiência</h1>
-                <h1>Criativa</h1>
-                <button>Clique Aqui</button>
+                <div class="conteudoQuadrado"></div>
+                    <h1>Experiência</h1>
+                    <h1>Criativa</h1>
+                    <button>Clique Aqui</button>
+                </div>
             </div>
         </div>
         <div class="materia4 ">
+            <img src="" alt="imagemRaciocinio" class="imgMateria">
             <div class="quadrado">
-                <h1>Lógica</h1>
-                <h1>Matemática  </h1>
-                <a href="https://github.com/nathanokz/Python/blob/main/Jogo%20Tabela%20Verdade.py">
-                <button>Clique Aqui</button>
+                <div class="conteudoQuadrado">
+                    <h1>Lógica</h1>
+                    <h1>Matemática  </h1>
+                    <a href="https://github.com/nathanokz/Python/blob/main/Jogo%20Tabela%20Verdade.py">
+                    <button>Clique Aqui</button>
+                </div>
                 </a>    
             </div>
         </div>
